fix redirecting issue

--- a/2025-12-06-real-betis-vs-barcelona.html
+++ b/2025-12-06-real-betis-vs-barcelona.html
@@ -468,8 +468,7 @@ It’s a big La Liga clash: the hom...</p>
     </div>
 
     <!-- Adsterra Scripts Section -->
-    <!-- Popunder Ad Script -->
-    <script type="text/javascript" src="//pensivedean.com/98/b2/61/98b2610dbd944ffe41efc4663be4b3ad.js"></script>
+    <!-- Popunder Ad Scripts REMOVED - These were causing automatic redirects -->
 
     <!-- JavaScript -->
     <script src="assets/js/main.js" defer></script>
