--- a/2025-12-07-real-madrid-vs-celta-vigo.html
+++ b/2025-12-07-real-madrid-vs-celta-vigo.html
@@ -468,8 +468,7 @@ Real Madrid — second in the table, just behind riv...</p>
     </div>
 
     <!-- Adsterra Scripts Section -->
-    <!-- Popunder Ad Script -->
-    <script type="text/javascript" src="//pensivedean.com/98/b2/61/98b2610dbd944ffe41efc4663be4b3ad.js"></script>
+    <!-- Popunder Ad Scripts REMOVED - These were causing automatic redirects -->
 
     <!-- JavaScript -->
     <script src="assets/js/main.js" defer></script>
