--- a/2025-12-10-real-madrid-vs-manchester-city.html
+++ b/2025-12-10-real-madrid-vs-manchester-city.html
@@ -466,8 +466,7 @@
     </div>
 
     <!-- Adsterra Scripts Section -->
-    <!-- Popunder Ad Script -->
-    <script type="text/javascript" src="//pensivedean.com/98/b2/61/98b2610dbd944ffe41efc4663be4b3ad.js"></script>
+    <!-- Popunder Ad Scripts REMOVED - These were causing automatic redirects -->
 
     <!-- JavaScript -->
     <script src="assets/js/main.js" defer></script>
