--- a/2026-01-11-real-madrid-vs-barcelona.html
+++ b/2026-01-11-real-madrid-vs-barcelona.html
@@ -480,9 +480,7 @@
     </div>
 
     <!-- Adsterra Scripts Section -->
-    <!-- Popunder Ad Scripts - Multiple for maximum impressions -->
-    <script src="https://pl28194614.effectivegatecpm.com/98/b2/61/98b2610dbd944ffe41efc4663be4b3ad.js"></script>
-    <script src="https://pl28190353.effectivegatecpm.com/52/30/74/5230747febbb777e6e14a3c30aa1fd30.js"></script>
+    <!-- Popunder Ad Scripts REMOVED - These were causing automatic redirects -->
 
     <!-- JavaScript -->
     <script src="assets/js/main.js" defer></script>
