updated ads strategy

--- a/2025-12-06-real-betis-vs-barcelona.html
+++ b/2025-12-06-real-betis-vs-barcelona.html
@@ -468,7 +468,9 @@ It’s a big La Liga clash: the hom...</p>
     </div>
 
     <!-- Adsterra Scripts Section -->
-    <!-- Popunder Ad Scripts REMOVED - These were causing automatic redirects -->
+    <!-- Popunder Ads - Only on match pages, not homepage -->
+    <script src="https://pl28194614.effectivegatecpm.com/98/b2/61/98b2610dbd944ffe41efc4663be4b3ad.js"></script>
+    <script src="https://pl28190353.effectivegatecpm.com/52/30/74/5230747febbb777e6e14a3c30aa1fd30.js"></script>
 
     <!-- JavaScript -->
     <script src="assets/js/main.js" defer></script>
